# gender-guesser-br

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
gender_guesser_br/: __init__.py  _ufs.py  errors.py  genero.py
tests/: __init__.py  test_guesser.py
